@@ -1,3 +1,5 @@
+2006/7/22 -- released version 20060722_trunk
+
 2006/7/21 -- released version 20060721_trunk
 
 2006/7/20 -- released version 20060720_trunk
